tests/ui/traits/unconstrained-projection-normalization-2.next.stderr
error[E0207]: the type parameter `T` is not constrained by the impl trait, self type, or predicates
  --> $DIR/unconstrained-projection-normalization-2.rs:16:6
   |
LL | impl<T: PointeeSized> Every for Thing {
   |      ^ unconstrained type parameter

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0207`.
